// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityMember Snapshot Testing should match snapshot with default props 1`] = `
<div
  class="w-fill flex flex-row items-center justify-between medium-box bg-[#E5EEDF]"
>
  <a
    href="/testuser"
  >
    <div
      class="text-h6"
    >
      @
      testuser
    </div>
  </a>
</div>
`;

exports[`CommunityMember Snapshot Testing should match snapshot with special characters username 1`] = `
<div
  class="w-fill flex flex-row items-center justify-between medium-box bg-[#E5EEDF]"
>
  <a
    href="/special-user_123"
  >
    <div
      class="text-h6"
    >
      @
      special-user_123
    </div>
  </a>
</div>
`;
